folder2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret

      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"

      containers:
        - name: nodejs-container
          image: alia153/ivolve:appv2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: volume-logs
              mountPath: /usr/src/app/data
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "1Gi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "2"

      volumes:
        - name: volume-logs
          persistentVolumeClaim:
            claimName: pvc-logs
