folder2/daemon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-daemonset-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: node-exporter     
  ports:
    - name: metrics
      protocol: TCP
      port: 9100        
      targetPort: 9100  
      nodePort: 30080
