folder2/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: ivolve
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: jenkins
