folder2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: nodejs-app     
  ports:
    - port: 3000
      targetPort: 3000
